syntax = "proto3";

package Telemetry;

service TelemetryProcessor {
  rpc Receive (SensorTelemetry) returns (Ack) {}
}

message SensorTelemetry {
  string deviceId = 1;
  int32 speed = 2;
  int32 temperature = 3;
}

message Ack {
  string message = 1;
}
